--- a/Areas/Admin/Views/AdminAuth/Login.cshtml
+++ b/Areas/Admin/Views/AdminAuth/Login.cshtml
@@ -20,10 +20,10 @@
         <form class="login-form" method="post">
             <div class="text-center text-uppercase"><h5 class="colorlogin" style="font-weight: bold">ĐĂNG NHẬP HỆ THỐNG</h5></div>
             <hr />
-            <input type="text" placeholder="Tên đăng nhập" name="Admin_Username" id="Admin_Username" class="form-control col-12" required value="saudaihoc">
+            <input type="text" placeholder="Tên đăng nhập" name="Admin_Username" id="Admin_Username" class="form-control col-12" required>
             <span id="Admin_Username_Error" class="small mb-1 text-danger col-12"></span>
 
-            <input name="Admin_Pass" id="Admin_Pass" class="form-control col-12" type="password" placeholder="Mật khẩu" required value="Saudaihoc123">
+            <input name="Admin_Pass" id="Admin_Pass" class="form-control col-12" type="password" placeholder="Mật khẩu" required >
             <span id="Admin_Pass_Error" class="small mb-1 text-danger col-12"></span>
 
             <div class="d-inline-flex flex-nowrap mb-2 mt-2 col-12">
@@ -32,7 +32,7 @@
                     <label class="form-check-label" for="radioDaiHoc">Hệ đại học</label>
                 </div>
                 <div class="form-check" style="margin-left:15px">
-                    <input class="form-check-input" type="radio" id="radioSauDaiHoc" name="radioHeDaoTao" value="1">
+                    <input class="form-check-input" type="radio" id="radioSauDaiHoc" name="radioHeDaoTao" value="1" checked>
                     <label class="form-check-label" for="radioSauDaiHoc">Hệ sau đại học</label>
                 </div>
             </div>
