--- a/Areas/Admin/Views/HocVienDangKys/DsHvDuTuyen.cshtml
+++ b/Areas/Admin/Views/HocVienDangKys/DsHvDuTuyen.cshtml
@@ -98,16 +98,17 @@
 
                         <div class="col-xxl-2 col-xl-12">
                             <div class="d-inline-flex flex-nowrap align-items-center">
-                                <button class="btn btn-outline-primary bd-rd text-nowrap" id="bt_search" style="margin-right:4px"><i data-feather="filter" style="vertical-align:middle!important"></i></button>
-                                <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_reset" href="@Url.Action("DsHvDuTuyen", "HocVienDangKys")" style="margin-right:4px;"><i data-feather="rotate-ccw" style="vertical-align:middle!important"></i></a>
+                                <button class="btn btn-outline-primary bd-rd text-nowrap" id="bt_search" style="margin-right:4px" title="Lọc dữ liệu"><i data-feather="filter" style="vertical-align:middle!important"></i></button>
+                                <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_reset" href="@Url.Action("DsHvDuTuyen", "HocVienDangKys")" style="margin-right:4px;" title="Tải lại dữ liệu"><i data-feather="rotate-ccw" style="vertical-align:middle!important"></i></a>
                                 <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_extend" style="margin-right:4px; display:none"><i data-feather="chevron-down" style="vertical-align:middle!important"></i></a>
                                 <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_collapse" style="margin-right: 4px; display: none"><i data-feather="chevron-up" style="vertical-align:middle!important"></i></a>
-                                <a class="btn btn-outline-primary bd-rd  text-nowrap" id="bt_export_excel" style="padding-right:6px; padding-left:6px"><i data-feather="download" style="vertical-align:middle!important"></i> Excel</a>
+                                <a class="btn btn-outline-primary bd-rd  text-nowrap" id="bt_export_excel" style="padding-right:6px; padding-left:6px" title="Xuất dữ liệu ra tệp excel"><i data-feather="download" style="vertical-align:middle!important"></i> Excel</a>
+                         
                                 <script>
                                     $(document).ready(function () {
                                         $('#bt_export_excel').click(function () {
                                             let queryString_export = window.location.search;
-                                            window.location.href = "/Admin/ExportDatas/ExportHocVienDuTuyen" + queryString_export;
+                                            window.location.href = "/Admin/ExportDatas/ExportHocVienDuTuyenForAll" + queryString_export;
                                         });
                                     });
                                 </script>
