--- a/Areas/Admin/Views/NganhMasters/Create.cshtml
+++ b/Areas/Admin/Views/NganhMasters/Create.cshtml
@@ -53,8 +53,7 @@
                     <div class="col-lg-3 col-12">
                         <label class="control-label col-md-12">Định hướng NC</label>
                         <div class="col-md-12">
-                            <select class="form-select" id="Nganh_Mt_NghienCuu_Ten" name="Nganh_Mt_NghienCuu_Ten">
-                                <option value="0">Chọn định hướng nc...</option>
+                            <select class="form-select" id="Nganh_Mt_NghienCuu_Ma" name="Nganh_Mt_NghienCuu_Ma">                           
                                 <option value="1">Ứng dụng</option>
                                 <option value="2">Nghiên cứu</option>
                                 <option value="3">Ứng dụng, Nghiên cứu</option>
