--- a/Areas/Admin/Views/NganhMasters/Edit.cshtml
+++ b/Areas/Admin/Views/NganhMasters/Edit.cshtml
@@ -5,90 +5,90 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin_Master.cshtml";
 }
 
-<h2>Edit</h2>
+<style>
+    .form-select, .form-control, .btn {
+        border-radius: 3px;
+    }
+</style>
+<header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
+    <div class="container-fluid px-4">
+        <div class="page-header-content">
+            <div class="row align-items-center justify-content-between pt-3">
+                <div class="col-auto mb-1">
+                    <div class="page-header-title  mb-2">
+                        <div class="page-header-icon"><i data-feather="list"></i></div>
+                        <span>Quản lý thông tin Ngành</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>NganhMaster</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Nganh_Mt_ID)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nganh_Mt_MaNganh, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nganh_Mt_MaNganh, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nganh_Mt_MaNganh, "", new { @class = "text-danger" })
+    <div class="container-fluid px-12">
+        <div class="card card-header-actions">
+            <div class="card-header">
+                <span>Sửa thông tin ngành ngành</span>
+                <a class="btn-close" aria-label="Close" href="@Url.Action("Index","NganhMasters")"></a>
             </div>
-        </div>
+            <div class="card-body">
+                <div class="row g-1">
+                    <div class="col-lg-3 col-12">
+                        <label class="control-label col-md-12">Mã ngành</label>
+                        <div class="col-md-12">
+                            @Html.EditorFor(model => model.Nganh_Mt_MaNganh, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Nganh_Mt_MaNganh, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-12">
+                        <label class="control-label col-md-12">Tên ngành</label>
+                        <div class="col-md-12">
+                            @Html.EditorFor(model => model.Nganh_Mt_TenNganh, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Nganh_Mt_TenNganh, "", new { @class = "text-danger" })
+                        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nganh_Mt_TenNganh, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nganh_Mt_TenNganh, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nganh_Mt_TenNganh, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    </div>
+                    <div class="col-lg-3 col-12">
+                        <label class="control-label col-md-12">Định hướng NC</label>
+                        <div class="col-md-12">
+                            <select class="form-select" id="Nganh_Mt_NghienCuu_Ma" name="Nganh_Mt_NghienCuu_Ma">
+                                <option value="1">Ứng dụng</option>
+                                <option value="2">Nghiên cứu</option>
+                                <option value="3">Ứng dụng, Nghiên cứu</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-12">
+                        <label class="control-label col-md-12">Chọn khoa quản lý</label>
+                        <div class="col-md-12">
+                            @Html.DropDownList("Khoa_ID", null, htmlAttributes: new { @class = "form-select" })
+                            @Html.ValidationMessageFor(model => model.Nganh_Mt_TenKhoa, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-lg-9 col-12">
+                        <label class="control-label col-md-12">Ghi chú</label>
+                        <div class="col-md-12">
+                            @Html.EditorFor(model => model.Nganh_Mt_GhiChu, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Nganh_Mt_GhiChu, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-12">
+                        <label style="visibility:hidden; color:white">a</label>
+                        <div class="col-md-12 text-nowrap">
+                            <center>
+                                <input class="btn btn-outline-success" type="submit" value="Đồng ý" />
+                                @Html.ActionLink("Hủy bỏ", "Index", null, new { @class = "btn btn-outline-danger", @style = "white-space:nowrap" })
+                            </center>
+                        </div>
+                    </div>
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nganh_Mt_NghienCuu_Ten, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nganh_Mt_NghienCuu_Ten, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nganh_Mt_NghienCuu_Ten, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nganh_Mt_NghienCuu_Ma, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nganh_Mt_NghienCuu_Ma, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nganh_Mt_NghienCuu_Ma, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Khoa_ID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Khoa_ID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Khoa_ID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nganh_Mt_TenKhoa, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nganh_Mt_TenKhoa, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nganh_Mt_TenKhoa, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nganh_Mt_TrangThai, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nganh_Mt_TrangThai, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nganh_Mt_TrangThai, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nganh_Mt_GhiChu, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nganh_Mt_GhiChu, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nganh_Mt_GhiChu, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
