--- a/Areas/Admin/Views/NganhMasters/Index.cshtml
+++ b/Areas/Admin/Views/NganhMasters/Index.cshtml
@@ -25,11 +25,6 @@
     <div class="card card-header-actions">
         <div class="card-header">
             <span>Danh sách các ngành</span>
-            <a class="btn btn-outline-primary btn-sm align-items-center" href="@Url.Action("Create","NganhMasters")">
-                @*<i class="me-1" data-feather="user-plus" style="vertical-align:central!important"></i>*@
-                + Thêm mới
-            </a>
-
         </div>
         <div class="card-body">
             <div class="row">
@@ -49,8 +44,12 @@
                                 <th>
                                     @Html.DisplayName("Khoa quản lý")
                                 </th>
-                                
-                                <th style="width:90px">Cập nhật</th>
+
+                                <th style="width:100px; text-align:center">
+                                    <a class="text-nowrap" style="text-decoration:none" href="@Url.Action("Create","NganhMasters")">
+                                        Thêm mới
+                                    </a>
+                                </th>
                             </tr>
                         </thead>
                         <tbody>
@@ -69,10 +68,12 @@
 
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Nganh_Mt_TenKhoa)
-                                    </td>   
-                                    <td>
+                                    </td>
+                                    <td style="width:100px; text-align:center">
                                         @Html.ActionLink("Sửa", "Edit", new { id = item.Nganh_Mt_ID }) |
-                                        @Html.ActionLink("Xoá", "Delete", new { id = item.Nganh_Mt_ID })
+                                        <a href="#" id="@item.Nganh_Mt_ID" onclick="DeleteNganh(@item.Nganh_Mt_ID)">Xóa</a>
+
+                                        @*@Html.ActionLink("Xoá", "Delete", new { id = item.Nganh_Mt_ID })*@
                                     </td>
                                 </tr>
                             }
@@ -80,7 +81,7 @@
                     </table>
                     <!-- Thêm mã phân trang -->
                     Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
-                        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @class = "mt-1 mb-1" }))
+                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @class = "mt-1 mb-1" }))
                     <!-- Kết thúc -->
                 </div>
             </div>
@@ -104,16 +105,48 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modal_tb_xoa">Thông báo</h5>
-                <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close" id="bt_cancel_delete_on_modal_first"></button>
             </div>
             <div class="modal-body">
-                <span>Bạn chắc chắn nguyện vọng này dữ liệu này?</span>
-                <input id="key_delete_dkxt_id" type="hidden" />
+                <span>Bạn chắc chắn xóa dữ liệu chuyên ngành này này?</span>
+                <input id="key_delete_id" type="hidden" />
             </div>
             <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Hủy</button>
-                <button class="btn btn-primary" type="button">Đồng ý</button>
+                <button class="btn btn-secondary" type="button" data-bs-dismiss="modal" id="bt_cancel_delete_on_modal_second">Hủy</button>
+                <button class="btn btn-primary" type="button" id="bt_OK_delete_on_modal">Đồng ý</button>
             </div>
         </div>
     </div>
 </div>
+<script>
+    function DeleteNganh(id_nganh) {
+        $('#key_delete_id').val(id_nganh);
+        $('#modal_tb_xoa').modal('show');
+    }
+    $(document).ready(function () {
+        $('#bt_cancel_delete_on_modal_first').click(function () {
+            $('#key_delete_id').val('');
+            $('#modal_tb_xoa').modal('hide');
+        });
+        $('#bt_cancel_delete_on_modal_second').click(function () {
+            $('#key_delete_id').val('');
+            $('#modal_tb_xoa').modal('hide');
+        });
+        $('#bt_OK_delete_on_modal').click(function () {
+            let data_delete = { Nganh_Mt_ID: $('#key_delete_id').val() }
+            $.ajax({
+                url: "/Admin/NganhMasters/RegisterMasterCheckCCCDAD/",
+                type: "POST",
+                data: JSON.stringify(checkCcAd),
+                async: false,
+                contentType: 'application/json;charset=utf-8',
+                success: function (res) {
+                    if (res.success == true) {
+                        $('#Error_Rgt_HocVien_CCCD').text("Số CCCD đã tồn tại."); flag = false;
+                    }
+                },
+                error: function () { }
+            });
+        });
+    });
+</script>
