--- a/Areas/Admin/Views/HocVienDangKys/DsHvDuTuyen.cshtml
+++ b/Areas/Admin/Views/HocVienDangKys/DsHvDuTuyen.cshtml
@@ -4,8 +4,6 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin_Master.cshtml";
 }
-<link href="~/Content/font_bootstrap-icons.css" rel="stylesheet" />
-
 <style>
     th, td {
         white-space: nowrap;
@@ -70,13 +68,37 @@
                 </div>
             </div>
             <div class="card-body">
-                <div class="row g-1" id="div_thongtin_them" style="display:none">
-                    <div class="col-xl-3 col-12"><span>- Ngành khoa học máy tính: 1 học viên</span></div>
-                    <div class="col-xl-3 col-12"><span>- Ngành Địa lý: 1 học viên</span></div>
-                    @*<div class="col-xl-3 col-12"><span>- Ngành Khoa học cây trồng: 10 học viên</span></div>
-                        <div class="col-xl-3 col-12"><span>- Ngành Khoa học cây trồng: 10 học viên</span></div>*@
+                <div class="row g-1 col-12" id="div_thongtin_them" style="display:none">
+                    <div id="div_data_thongke" class="row col-12"></div>
                     <hr class="mt-2 mb2" />
                 </div>
+
+                <script>
+                    $(document).ready(function () {
+                        ShowData_ThongKe();
+                    });
+                    function ShowData_ThongKe() {
+                        $.ajax({
+                            url: "/HocVienDangKys/HocVienDuTuyen_ThongKe/",
+                            type: "GET",
+                            contentType: 'application/json;charset=utf-8',
+                            success: function (res) {
+                                console.log(res);
+                                if (res.success) {
+                                    var data_thongke = res.data;
+                                    for (index_data = 0; index_data < data_thongke.length; index_data++) {
+                                        var str_div = `<div class="col-lg-3 col-12"><span>Ngành: ${data_thongke[index_data].ThongKe_TenNganh}/ ${data_thongke[index_data].ThongKe_SoLuong} hv</span></div>`;
+                                        $('#div_data_thongke').append(str_div);
+                                    }
+                                }
+                            },
+                            error: function () {
+                                console.log("Lỗi");
+                            }
+                        });
+                    }
+                </script>
+
                 @using (Html.BeginForm("DsHvDuTuyen", "HocVienDangKys", FormMethod.Get))
                 {
                     <div class="row g-1">
@@ -103,14 +125,15 @@
                                 <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_extend" style="margin-right:4px; display:none"><i data-feather="chevron-down" style="vertical-align:middle!important"></i></a>
                                 <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_collapse" style="margin-right: 4px; display: none"><i data-feather="chevron-up" style="vertical-align:middle!important"></i></a>
                                 <a class="btn btn-outline-primary bd-rd  text-nowrap" id="bt_export_excel" style="padding-right:6px; padding-left:6px" title="Xuất dữ liệu ra tệp excel"><i data-feather="download" style="vertical-align:middle!important"></i> Excel</a>
-                         
+
                                 <script>
                                     $(document).ready(function () {
                                         $('#bt_export_excel').click(function () {
                                             let queryString_export = window.location.search;
-                                            window.location.href = "/Admin/ExportDatas/ExportHocVienDuTuyenForAll" + queryString_export;
+                                            window.location.href = "/Admin/ExportDatas/ExportHocVienDuTuyen" + queryString_export;
                                         });
                                     });
+
                                 </script>
                             </div>
                         </div>
