--- a/Areas/Admin/Views/HocVienDangKys/DsHvDuTuyenKiemTraHoSo.cshtml
+++ b/Areas/Admin/Views/HocVienDangKys/DsHvDuTuyenKiemTraHoSo.cshtml
@@ -169,9 +169,15 @@
 
                     $('#HocVien_SoHoSo').val(data.HocVien_SoHoSo);
 
-                    if (data.HocVien_LePhi_TrangThai == 0) {
+                    if (data.Hv_PhieuDangKyDuThi.trim() === '') { $('#checkbox_check_phieudangky').removeAttr('checked', 'checked'); }
+                    if (data.Hv_SoYeuLyLich.trim() === '') { $('#checkbox_check_syll').removeAttr('checked', 'checked'); }
+                    if (data.Hv_BangDH.trim() === '') { $('#checkbox_check_bangdaihoc').removeAttr('checked', 'checked'); }
+                    if (data.Hv_BangDiemDH.trim() === '') { $('#checkbox_check_bangdiem').removeAttr('checked', 'checked'); }
+                    if (data.Hv_GiayKhamSucKhoe.trim() === '') { $('#checkbox_check_giaykhamsk').removeAttr('checked', 'checked'); }
+                    if (data.Hv_TuiAnh4x6.trim() === '') { $('#checkbox_check_anh4x6').removeAttr('checked', 'checked'); }
+                    if (data.Hv_GiayMienNgoaiNgu.trim() === '') { $('#checkbox_check_ccvanbangnn').removeAttr('checked', 'checked'); }
+                    if (data.Hv_GiayToKhac.trim() === '') { $('#checkbox_check_mckhac').removeAttr('checked', 'checked'); }   
 
-                    }
 
                     if (data.HocVien_SoYeuLyLich) {
                         const ArrSoYeuLyLich = data.HocVien_SoYeuLyLich.split("#");
@@ -183,7 +189,7 @@
                         }
                     }
                     else {
-                        var str_a = `<a style="color:blue">Không có dữ liệu</a> &ensp;`;
+                        var str_a = `<a >Không có dữ liệu</a> &ensp;`;
                         $('#div_list_view_soyeulylich').append(str_a);
                     }
 
@@ -195,7 +201,7 @@
                         }
                     }
                     else {
-                        var str_a = `<a style="color:blue">Không có dữ liệu</a> &ensp;`;
+                        var str_a = `<a >Không có dữ liệu</a> &ensp;`;
                         $('#div_list_view_bangdaihoc').append(str_a);
                     }
 
@@ -208,7 +214,7 @@
                         }
                     }
                     else {
-                        var str_a = `<a style="color:blue">Không có dữ liệu</a> &ensp;`;
+                        var str_a = `<a >Không có dữ liệu</a> &ensp;`;
                         $('#div_list_view_bangdiem').append(str_a);
                     }
 
@@ -221,7 +227,7 @@
                         }
                     }
                     else {
-                        var str_a = `<a style="color:blue">Không có dữ liệu</a> &ensp;`;
+                        var str_a = `<a >Không có dữ liệu</a> &ensp;`;
                         $('#div_list_view_giaykhamsuckhoe').append(str_a);
                     }
 
@@ -234,7 +240,7 @@
                         }
                     }
                     else {
-                        var str_a = `<a style="color:blue">Không có dữ liệu</a> &ensp;`;
+                        var str_a = `<a >Không có dữ liệu</a> &ensp;`;
                         $('#div_list_view_anh4x6').append(str_a);
                     }
 
@@ -247,7 +253,7 @@
                         }
                     }
                     else {
-                        var str_a = `<a style="color:blue">Không có dữ liệu</a> &ensp;`;
+                        var str_a = `<a >Không có dữ liệu</a> &ensp;`;
                         $('#div_list_view_cc_bang_ngoaingu').append(str_a);
                     }
 
@@ -260,7 +266,7 @@
                         }
                     }
                     else {
-                        var str_a = `<a style="color:blue">Không có dữ liệu</a> &ensp;`;
+                        var str_a = `<a >Không có dữ liệu</a> &ensp;`;
                         $('#div_list_view_mckhac').append(str_a);
                     }
 
@@ -300,7 +306,7 @@
                             }
                         }
                         else {
-                            var str_a = `<a style="color:blue">Không có dữ liệu</a> &ensp;`;
+                            var str_a = `<a >Không có dữ liệu</a> &ensp;`;
                             $('#div_list_view_mclephi').append(str_a);
                         }
                     }
@@ -851,9 +857,16 @@
                                     <tr>
                                         <td>
                                             <div class="row">
-                                                <div class="col-lg-12 col-12 p-1">
+                                                <div class="col-lg-12 col-12">
                                                     <div class="form-group">
-                                                        <label class="control-label col-md-12">Sơ yếu lý lịch:</label>
+                                                        
+                                                        <div class="d-inline-flex flex-nowrap  align-items-center ">
+                                                            <div class="form-check align-items-center col-md-12">
+                                                                <input class="form-check-input" type="checkbox" id="checkbox_check_syll" name="checkbox_check_syll" checked>
+                                                                <label class="form-check-label" for="checkbox_check_syll" style="color:blue;">Sơ yếu lý lịch</label>
+                                                            </div>
+                                                        </div>
+
                                                         <div class="col-md-12" id="div_list_view_soyeulylich">
                                                             @*<a class="btn btn-light btn-sm" style="color:blue" onclick="showimg('/Content/images/tttvts2023.jpg','1')">Tệp 1</a>&ensp;*@
 
@@ -861,18 +874,29 @@
                                                     </div>
                                                 </div>
                                                 <hr class="mt-0 mb-1" />
-                                                <div class="col-lg-12 col-12 p-1">
+                                                <div class="col-lg-12 col-12">
                                                     <div class="form-group">
-                                                        <label class="control-label col-md-12">Minh chứng bằng đại học:</label>
+                                                        <div class="d-inline-flex flex-nowrap  align-items-center ">
+                                                            <div class="form-check align-items-center col-md-12">
+                                                                <input class="form-check-input" type="checkbox" id="checkbox_check_bangdaihoc" name="checkbox_check_bangdaihoc" checked>
+                                                                <label class="form-check-label" for="checkbox_check_bangdaihoc" style="color:blue;">Minh chứng bằng đại học</label>
+                                                            </div>
+                                                        </div>
+
                                                         <div class="col-md-12" id="div_list_view_bangdaihoc">
 
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <hr class="mt-0 mb-1" />
-                                                <div class="col-lg-12 col-12 p-1">
+                                                <div class="col-lg-12 col-12">
                                                     <div class="form-group">
-                                                        <label class="control-label col-md-12">Minh chứng bảng điểm:</label>
+                                                        <div class="d-inline-flex flex-nowrap  align-items-center ">
+                                                            <div class="form-check align-items-center col-md-12">
+                                                                <input class="form-check-input" type="checkbox" id="checkbox_check_bangdiem" name="checkbox_check_bangdiem" checked>
+                                                                <label class="form-check-label" for="checkbox_check_bangdiem" style="color:blue;">Minh chứng bảng điểm</label>
+                                                            </div>
+                                                        </div>
                                                         <div class="col-md-12" id="div_list_view_bangdiem">
 
                                                         </div>
@@ -880,18 +904,26 @@
                                                     </div>
                                                 </div>
                                                 <hr class="mt-0 mb-1" />
-                                                <div class="col-lg-12 col-12 p-1 mb-1">
+                                                <div class="col-lg-12 col-12 mb-1">
                                                     <div class="form-group">
-                                                        <label class="control-label col-md-12">Giấy khám sức khỏe:</label>
+                                                        <div class="d-inline-flex flex-nowrap  align-items-center ">
+                                                            <div class="form-check align-items-center col-md-12">
+                                                                <input class="form-check-input" type="checkbox" id="checkbox_check_giaykhamsk" name="checkbox_check_giaykhamsk" checked>
+                                                                <label class="form-check-label" for="checkbox_check_giaykhamsk" style="color:blue;">Giấy khám sức khỏe</label>
+                                                            </div>
+                                                        </div>
                                                         <div class="col-md-12 mb-1" id="div_list_view_giaykhamsuckhoe">
 
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <hr class="mt-0 mb-1" />
-                                                <div class="col-lg-12 col-12 p-1">
+                                                <div class="col-lg-12 col-12">
                                                     <div class="form-group">
-                                                        <label class="control-label col-md-12">Ảnh 4 x 6:</label>
+                                                        <div class="form-check align-items-center col-md-12">
+                                                            <input class="form-check-input" type="checkbox" id="checkbox_check_anh4x6" name="checkbox_check_anh4x6" checked>
+                                                            <label class="form-check-label" for="checkbox_check_anh4x6" style="color:blue;">Ảnh 4 x 6</label>
+                                                        </div>
                                                         <div class="col-md-12" id="div_list_view_anh4x6">
                                                         </div>
                                                     </div>
@@ -915,23 +947,33 @@
                                     <tr>
                                         <td>
                                             <div class="row">
-                                                <div class="col-lg-12 col-12 p-1">
+                                                <div class="col-lg-12 col-12">
                                                     <div class="form-group">
-                                                        <label class="control-label col-md-12">Chứng chỉ/văn bằng ngoại ngữ:</label>
+                                                          <div class="d-inline-flex flex-nowrap  align-items-center ">
+                                                            <div class="form-check align-items-center col-md-12">
+                                                                <input class="form-check-input" type="checkbox" id="checkbox_check_ccvanbangnn" name="checkbox_check_ccvanbangnn" checked>
+                                                                <label class="form-check-label" for="checkbox_check_ccvanbangnn" style="color:blue;">Chứng chỉ/văn bằng ngoại ngữ</label>
+                                                            </div>
+                                                        </div>
                                                         <div class="col-md-12" id="div_list_view_cc_bang_ngoaingu">
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <hr class="mt-0 mb-1" />
-                                                <div class="col-lg-12 col-12 p-1">
+                                                <div class="col-lg-12 col-12">
                                                     <div class="form-group">
-                                                        <label class="control-label col-md-12">Minh chứng khác (nếu có):</label>
+                                                        <div class="d-inline-flex flex-nowrap  align-items-center ">
+                                                            <div class="form-check align-items-center col-md-12">
+                                                                <input class="form-check-input" type="checkbox" id="checkbox_check_mckhac" name="checkbox_check_mckhac" checked>
+                                                                <label class="form-check-label" for="checkbox_check_mckhac" style="color:blue;">Minh chứng khác</label>
+                                                            </div>
+                                                        </div>
                                                         <div class="col-md-12" id="div_list_view_mckhac">
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <hr class="mt-0 mb-2" />
-                                                <div class="col-lg-12 col-12 p-1">
+                                                <div class="col-lg-12 col-12">
                                                     <div class="form-group">
                                                         <label class="control-label col-md-12">Minh chứng nộp lệ phí:</label>
                                                         <div class="col-12 mt-2">
@@ -955,7 +997,7 @@
                                                     </div>
                                                 </div>
                                                 <hr class="mt-0 mb-3" />
-                                                <div class="col-lg-12 col-12 p-1 mb-2">
+                                                <div class="col-lg-12 col-12 mb-2">
                                                     <center>
                                                         <a class="btn btn-sm btn-light" id="bt_update_hocvien">Cập nhật</a>
                                                         <a class="btn btn-sm btn-light" id="bt_delete_hocvien" style="margin-left:4px">Xóa</a>
@@ -981,7 +1023,7 @@
                 <div class="col-lg-12 col-12">
                     <div class="row ">
                         <div class="col-xxl-7 col-lg-12">
-                            <input class="form-control" type="text" id="DuTuyen_ThongBaoKiemDuyet" name="DuTuyen_ThongBaoKiemDuyet" placeholder="Nhập thông báo (nếu có)">
+                            <input class="form-control" type="text" id="DuTuyen_ThongBaoKiemDuyet" name="DuTuyen_ThongBaoKiemDuyet" placeholder="Nhập thông báo (nếu có)" disabled>
                             <span id="Error_Rgt_DuTuyen_ThongBaoKiemDuyet" class="small mb-1 text-danger"></span>
                         </div>
                         <div class="col-xxl-5 col-lg-12">
