--- a/Areas/Admin/Views/Shared/_Layout_Admin_auth.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin_auth.cshtml
@@ -10,7 +10,7 @@
     <link href="~/Content/styles.css" rel="stylesheet" />
     <!-- bootstrap 5.3-->
     <link href="~/Content/css/bootstrap.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
+    <link rel="shortcut icon" href="~/favicon.png">   
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/libs_font-awesome_6.1.1_js_all.min.js" data-search-pseudo-elements defer crossorigin="anonymous"></script>
     <script src="~/Scripts/feather.min.js" crossorigin="anonymous"></script>
